WA fixes - color contrast and Aria issues

--- a/web/themes/custom/freelance/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/web/themes/custom/freelance/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -13,3 +13,5 @@ $red: #c12e23;
 $strong-cyan: #2099b7;
 $blue-dark: #00497b;
 $blue-darkest: #1c202b;
+// new WA complaint link color
+$wa-strong-cyan: #1f90ae;
